<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/songThumbnail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/song_thumbnail" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/songTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/queueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_queue"
            android:layout_marginEnd="8dp"
            app:tint="?attr/colorPrimary"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/queue_icon" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:tint="?attr/colorPrimary"
            android:src="@drawable/ic_pause"
            android:contentDescription="@string/play_icon"
            android:background="?selectableItemBackgroundBorderless"/>

    </LinearLayout>

</layout>