<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Sherry">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_back_arrow"
            android:padding="15dp"
            android:contentDescription="@string/back_icon"
            app:tint="?android:textColorPrimary" />

        <FrameLayout
            android:id="@+id/playlistLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/playerContainer">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Playlist Cover ImageView -->
                <ImageView
                    android:id="@+id/playlistCover"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/playlist_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Playlist Title TextView -->
                    <TextView
                        android:id="@+id/playlistTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:textSize="24sp"
                        android:fontFamily="@font/gotham_bold"
                        android:gravity="start"
                        android:layout_marginTop="16dp" />

                    <ImageView
                        android:id="@+id/addToPlaylistIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        app:tint="?attr/colorPrimary"
                        android:paddingStart="20dp"
                        android:visibility="gone"
                        android:background="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_add_icon"
                        android:contentDescription="@string/add_track_icon" />

                </LinearLayout>

                <!-- Playlist Description TextView -->
                <TextView
                    android:id="@+id/playlistDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_medium"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:layout_marginTop="8dp" />

                <!-- Tracklist RecyclerView -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracklistRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/addToPlaylistButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_playlist_button"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_tracks_button_background"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

            </LinearLayout>

        </FrameLayout>

        <!-- Player Fragment View -->
        <FrameLayout
            android:id="@+id/playerContainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_navigation"/>

        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/nav_menu" />
    </RelativeLayout>
</layout>